metadata/force-app/main/default/objects/Account/fields/dddd__c.field-meta.xml
<CustomField>
    <fullName>dddd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>dddd</label>
    <type>Checkbox</type>
</CustomField>