metadata/force-app/main/default/objects/Account/fields/eeeeeee__c.field-meta.xml
<CustomField>
    <fullName>eeeeeee__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eeeee</label>
    <type>Text</type>
</CustomField>