metadata/force-app/main/default/objects/Account/fields/field__c.field-meta.xml
<CustomField>
    <fullName>field__c</fullName>
    <label>field</label>
    <length>10</length>
    <type>Text</type>
</CustomField>