metadata/force-app/main/default/objects/Account/fields/NEW_FIELD__c.field-meta.xml
<CustomField>
    <fullName>NEW_FIELD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NEW FIELD</label>
    <type>Checkbox</type>
</CustomField>