metadata/force-app/main/default/objects/Account/fields/test_box__c.field-meta.xml
<CustomField>
    <fullName>test_box__c</fullName>
    <label>test box</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>