metadata/force-app/main/default/objects/Account/validationRules/Test.validationRule-meta.xml
<ValidationRule>
    <fullName>Test</fullName>
    <active>false</active>
    <errorConditionFormula>Name = &apos;Test&apos;</errorConditionFormula>
    <errorMessage>Name is Test</errorMessage>
</ValidationRule>